[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["Leandro Vieira <leandro.vieira.silva.new@gmail.com>"]
readme = "README.md"
packages = [{include = "notas_musicais"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.0.280"
taskipy = "^1.12.0"


[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.22.0"
mkdocs = "^1.5.1"
mkdocs-material = "^9.1.21"
mkdocstrings-python = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
